--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -60,7 +60,7 @@
         [disabled]="addTestimonyFormGroup.invalid"
         class="submit-button"
       >
-        Agregar problematica
+        Agregar testimonio
       </button>
     </div>
   </form>
