--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -38,7 +38,7 @@
         </button>
         <p>Agregar testimonio</p>
       </div>
-      <div class="button-group">
+      <!--div class="button-group">
         <button
           type="button"
           mat-mini-fab
@@ -50,7 +50,7 @@
         </button>
 
         <p>Agregar Problema</p>
-      </div>
+      </div-->
 
       <div class="button-group">
         <button
@@ -73,7 +73,7 @@
 
     <mat-card class="images-card">
 
-      <div class="set-12 imghldr" *ngIf="subcategory.images.length == 0">
+      <div class="set-12 imghldr" *ngIf="topic.images.length == 0">
         <mat-icon >panorama</mat-icon>
       </div>
 
@@ -127,9 +127,8 @@
           </p>
         </div>
 
-        <table mat-table [dataSource]="solutionsList" class="problems-table">
+        <table mat-table [dataSource]="solutions" class="problems-table">
           <!-- NAME Column -->
-          <!-- Users Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">{{ element.title }}</td>
@@ -138,20 +137,20 @@
           <!-- Ranking Column -->
           <ng-container matColumnDef="ranking">
             <th mat-header-cell *matHeaderCellDef>Ranking</th>
-            <td mat-cell *matCellDef="let element">{{ element.ranking }}</td>
+            <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
           <!-- Users Column -->
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-            <td mat-cell *matCellDef="let element">{{ element.users }}</td>
+            <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
           <!-- SOLUTIONS Column -->
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.interactions }}
+              0
             </td>
           </ng-container>
 
