--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -11,6 +11,7 @@
         <li>{{ document.title }}</li>
         <li>{{ category.category.name }}</li>
         <li>{{ subcategory.category.name }}</li>
+        <li>{{ solution.title }}</li>
       </breadcrumbs-component>
     </div>
     <div class="set-6 txt-right">
@@ -52,7 +53,7 @@
         <p>Agregar Problema</p>
       </div-->
 
-      <div class="button-group">
+      <!--div class="button-group">
         <button
           type="button"
           mat-mini-fab
@@ -64,7 +65,7 @@
         </button>
 
         <p>Agregar Solución</p>
-      </div>
+      </div-->
     </div>
   </div>
   
@@ -73,11 +74,11 @@
 
     <mat-card class="images-card">
 
-      <div class="set-12 imghldr" *ngIf="topic.images.length == 0">
+      <div class="set-12 imghldr" *ngIf="solution.images.length == 0">
         <mat-icon >panorama</mat-icon>
       </div>
 
-      <slider-images [images]="sliderImages" *ngIf="topic.images.length != 0"></slider-images>
+      <slider-images [images]="sliderImages" *ngIf="solution.images.length != 0"></slider-images>
 
       <div class="footer">
         <label class="item">
@@ -97,17 +98,17 @@
     <mat-card class="about-card">
       <div class="box">
         <p class="title">Título</p>
-        <p class="text">{{ topic.title }}</p>
+        <p class="text">{{ solution.title }}</p>
       </div>
 
       <div class="box">
         <p class="title">Descripción</p>
-        <p class="text">{{ topic.description }}</p>
+        <p class="text">{{ solution.description }}</p>
       </div>
 
     </mat-card>
 
-    <div class="table-card">
+    <!--div class="table-card">
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Cobertura</mat-label>
@@ -128,27 +129,25 @@
         </div>
 
         <table mat-table [dataSource]="solutions" class="problems-table">
-          <!-- NAME Column -->
+          
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" (click)="linkSolution(element._id)">
-              <a href="javascript:void(0)">{{ element.title }}</a>
-            </td>
+            <td mat-cell *matCellDef="let element">{{ element.title }}</td>
           </ng-container>
 
-          <!-- Ranking Column -->
+          
           <ng-container matColumnDef="ranking">
             <th mat-header-cell *matHeaderCellDef>Ranking</th>
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
-          <!-- Users Column -->
+          
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef>Usuarios</th>
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
-          <!-- SOLUTIONS Column -->
+          
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
             <td mat-cell *matCellDef="let element">
@@ -160,9 +159,9 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
       </mat-card>
-    </div>
+    </div-->
 
-    <mat-card class="card-chart donut">
+    <!--mat-card class="card-chart donut">
       <p class="title">Título de la gráfica</p>
       <div class="content">
         <canvas
@@ -173,7 +172,7 @@
           [options]="chartOptions"
         ></canvas>
       </div>
-    </mat-card>
+    </mat-card-->
 
     <mat-card class="card-chart circle">
       <p class="title">Título de la gráfica</p>
