--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -30,6 +30,7 @@
             mat-mini-fab
             color="warn"
             class="add-button green"
+            (click)="openModalSolution()"
           >
             <mat-icon>create_new_folder</mat-icon>
           </button>
@@ -41,6 +42,7 @@
             mat-mini-fab
             color="warn"
             class="add-button purple"
+            (click)="openModalTestimony()"
           >
             <mat-icon style="color: white">create_new_folder</mat-icon>
           </button>
