--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div *ngIf="isDataAvailable">
+<div *ngIf="isDataAvailable" class="content">
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
@@ -15,69 +15,25 @@
     </div>
     <div class="set-6 txt-right">
       <span class="created-by">
-        Autor: <span class="author">{{category.createdBy.firstname}}
-          {{category.createdBy.lastname}}</span>
+        Autor:
+        <span class="author"
+          >{{ category.createdBy.firstname }}
+          {{ category.createdBy.lastname }}</span
+        >
       </span>
     </div>
-  </div>  
-  
-  <div class="header">
-    <breadcrumbs-component>
-    </breadcrumbs-component>
-    <div class="actions-rigth">
-
-      <div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini test"
-          matTooltip="Agregar testimonio"
-          (click)="popAddDocumentTestimony()"
-        >
-          <mat-icon>forum</mat-icon>
-        </button>
-        <p>Agregar testimonio</p>
-      </div>
-      <!--div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini warn"
-          matTooltip="Agregar problema"
-          (click)="popAddDocumentTheme()"
-        >
-          <mat-icon>warning</mat-icon>
-        </button>
-
-        <p>Agregar Problema</p>
-      </div-->
-
-      <div class="button-group">
-        <button
-          type="button"
-          mat-mini-fab
-          class="mini insights"
-          matTooltip="Agregar Solución"
-          (click)="popAddDocumentSolution()"
-        >
-          <mat-icon>insights</mat-icon>
-        </button>
-
-        <p>Agregar Solución</p>
-      </div>
-    </div>
   </div>
-  
 
   <div class="body">
-
     <mat-card class="images-card">
-
       <div class="set-12 imghldr" *ngIf="topic.images.length == 0">
-        <mat-icon >panorama</mat-icon>
+        <mat-icon>panorama</mat-icon>
       </div>
 
-      <slider-images [images]="sliderImages" *ngIf="topic.images.length != 0"></slider-images>
+      <slider-images
+        [images]="sliderImages"
+        *ngIf="topic.images.length != 0"
+      ></slider-images>
 
       <div class="footer">
         <label class="item">
@@ -94,6 +50,52 @@
       </div>
     </mat-card>
 
+    <div class="header">
+      <div>
+        <mat-form-field appearance="outline">
+          <mat-label>Cobertura</mat-label>
+          <mat-select [value]="document.coverage[0]._id">
+            <mat-option
+              *ngFor="let option of document.coverage"
+              [value]="option._id"
+            >
+              <small>{{ option.name | titlecase }}</small>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="actions-rigth">
+        <div class="button-group">
+          <button
+            type="button"
+            mat-mini-fab
+            class="mini test"
+            matTooltip="Agregar testimonio"
+            (click)="popAddDocumentTestimony()"
+          >
+            <mat-icon>forum</mat-icon>
+          </button>
+          <p>Agregar testimonio</p>
+        </div>
+        <!--  -->
+
+        <div class="button-group">
+          <button
+            type="button"
+            mat-mini-fab
+            class="mini insights"
+            matTooltip="Agregar Solución"
+            (click)="popAddDocumentSolution()"
+          >
+            <mat-icon>insights</mat-icon>
+          </button>
+
+          <p>Agregar Solución</p>
+        </div>
+      </div>
+    </div>
+
     <mat-card class="about-card">
       <div class="box">
         <p class="title">Título</p>
@@ -104,21 +106,9 @@
         <p class="title">Descripción</p>
         <p class="text">{{ topic.description }}</p>
       </div>
-
     </mat-card>
 
     <div class="table-card">
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>Cobertura</mat-label>
-          <mat-select [value]="document.coverage[0]._id">
-            <mat-option *ngFor="let option of document.coverage" [value]="option._id">
-              <small>{{ option.name | titlecase }}</small>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-
       <mat-card>
         <div>
           <p class="list-title">
@@ -131,7 +121,11 @@
           <!-- NAME Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" (click)="linkSolution(element._id)">
+            <td
+              mat-cell
+              *matCellDef="let element"
+              (click)="linkSolution(element._id)"
+            >
               <a href="javascript:void(0)">{{ element.title }}</a>
             </td>
           </ng-container>
@@ -151,9 +145,7 @@
           <!-- SOLUTIONS Column -->
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
-            <td mat-cell *matCellDef="let element">
-              0
-            </td>
+            <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
