--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -5,13 +5,20 @@
   width: 100%;
   height: auto;
 
+  .content {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    // background-color: orange;
+  }
+
   .imghldr {
     min-height: 150px;
     max-height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba($color: #CEDDFF, $alpha: 0.4);
+    background: rgba($color: #ceddff, $alpha: 0.4);
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
     overflow: hidden;
 
@@ -27,7 +34,7 @@
       object-fit: contain;
     }
   }
-  
+
   .header {
     width: 100%;
     display: flex;
@@ -72,6 +79,7 @@
 
   .body {
     display: grid;
+    width: 100%;
     column-gap: 25pt;
     row-gap: 25pt;
     grid-template-columns: repeat(12, 1fr);
@@ -133,14 +141,19 @@
       }
     }
 
+    .header {
+      grid-column: 5 / 13;
+      width: 100%;
+    }
+
     .about-card {
-      grid-area: 1 / 5 / 2 / 13;
+      grid-column: 5 / 13;
       width: 100%;
       padding: 2em;
 
       .box {
         margin-bottom: 2em;
-        
+
         .title {
           font-size: 12pt;
           font-weight: 500;
@@ -158,7 +171,7 @@
     }
 
     .table-card {
-      grid-area: 2 / 5 / 3 / 13;
+      grid-column: 5 / 13;
       width: 100%;
 
       .mat-column-title {
