--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -24,7 +24,136 @@
     </div>
   </div>
 
-  <div class="body">
+  <div class="set-12">
+    <div class="set-3 col-lft">
+      <mat-card class="set-12 doc-description">
+        <div class="set-12 imghldr" *ngIf="topic.images.length == 0">
+          <mat-icon>panorama</mat-icon>
+        </div>
+        <slider-images [images]="sliderImages" *ngIf="topic.images.length != 0">
+        </slider-images>
+        <div class="footer">
+          <label class="item">
+            <mat-icon color="primary">add_circle</mat-icon>
+            <input
+              type="file"
+              accept="image/*"
+              id="addImageInput"
+              (change)="handleSelectImage($event)"
+              multiple
+            />
+          </label>
+          <avatars-row [users]="collaborators"></avatars-row>
+        </div>        
+      </mat-card>
+      <mat-card class="set-12 card-chart donut">
+        
+          <p class="title">Título de la gráfica</p>
+          <div class="content">
+            <canvas
+              class="donut-chart"
+              baseChart
+              [data]="data"
+              [type]="'doughnut'"
+              [options]="chartOptions"
+            ></canvas>
+          </div>
+
+      </mat-card>   
+
+    </div>
+    <div class="set-9 col-rgt">
+      <div class="set-12 item-card">
+        <div class="set-8" style="padding-left: 10px;">
+          <mat-form-field appearance="outline">
+            <mat-label>Cobertura</mat-label>
+            <mat-select [value]="document.coverage[0]._id">
+              <mat-option *ngFor="let option of document.coverage" [value]="option._id">
+                <small>{{ option.name | titlecase }}</small>
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>  
+        <div class="set-4 txt-right">
+          <button 
+            type="button" 
+            mat-mini-fab 
+            color="accent" 
+            class="mini test" 
+            matTooltip="Agregar Testimonio" 
+            (click)="popAddDocumentTestimony()"
+            >
+            <mat-icon>forum</mat-icon>
+          </button>
+
+          <button 
+            type="button" 
+            mat-mini-fab 
+            class="mini insights" 
+            matTooltip="Agregar Solución" 
+            (click)="popAddDocumentSolution()"
+            >
+            <mat-icon>insights</mat-icon>
+          </button>
+        </div>  
+      </div>     
+      <mat-card class="set-12 about-card">
+        <div class="box">
+          <p class="title">Título</p>
+          <p class="text">{{ topic.title }}</p>
+        </div>
+
+        <div class="box">
+          <p class="title">Descripción</p>
+          <p class="text">{{ topic.description }}</p>
+        </div>
+      </mat-card>      
+
+      <mat-card class="set-12 about-card">
+        <div>
+          <p class="list-title">
+            <small>Soluciones</small>
+            <mat-icon class="icon-insights">insights</mat-icon>
+          </p>
+        </div>
+
+        <table mat-table [dataSource]="solutions" class="problems-table">
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td
+              mat-cell
+              *matCellDef="let element"
+              (click)="linkSolution(element._id)"
+            >
+              <a href="javascript:void(0)">{{ element.title }}</a>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="ranking">
+            <th mat-header-cell *matHeaderCellDef>Ranking</th>
+            <td mat-cell *matCellDef="let element">0</td>
+          </ng-container>
+
+
+          <ng-container matColumnDef="users">
+            <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+            <td mat-cell *matCellDef="let element">0</td>
+          </ng-container>
+
+
+          <ng-container matColumnDef="interactions">
+            <th mat-header-cell *matHeaderCellDef>Interacciones</th>
+            <td mat-cell *matCellDef="let element">0</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </mat-card>      
+    </div>
+  </div>
+
+  <!--div class="set-12">
     <mat-card class="images-card">
       <div class="set-12 imghldr" *ngIf="topic.images.length == 0">
         <mat-icon>panorama</mat-icon>
@@ -48,9 +177,9 @@
         </label>
         <avatars-row [users]="collaborators"></avatars-row>
       </div>
-    </mat-card>
+    </mat-card-->
 
-    <div class="header">
+    <!--div class="header">
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Cobertura</mat-label>
@@ -78,7 +207,6 @@
           </button>
           <p>Agregar testimonio</p>
         </div>
-        <!--  -->
 
         <div class="button-group">
           <button
@@ -94,9 +222,9 @@
           <p>Agregar Solución</p>
         </div>
       </div>
-    </div>
+    </div-->
 
-    <mat-card class="about-card">
+    <!--mat-card class="about-card">
       <div class="box">
         <p class="title">Título</p>
         <p class="text">{{ topic.title }}</p>
@@ -106,9 +234,9 @@
         <p class="title">Descripción</p>
         <p class="text">{{ topic.description }}</p>
       </div>
-    </mat-card>
+    </mat-card-->
 
-    <div class="table-card">
+    <!--div class="table-card">
       <mat-card>
         <div>
           <p class="list-title">
@@ -118,7 +246,6 @@
         </div>
 
         <table mat-table [dataSource]="solutions" class="problems-table">
-          <!-- NAME Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
             <td
@@ -130,19 +257,18 @@
             </td>
           </ng-container>
 
-          <!-- Ranking Column -->
           <ng-container matColumnDef="ranking">
             <th mat-header-cell *matHeaderCellDef>Ranking</th>
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
-          <!-- Users Column -->
+
           <ng-container matColumnDef="users">
             <th mat-header-cell *matHeaderCellDef>Usuarios</th>
             <td mat-cell *matCellDef="let element">0</td>
           </ng-container>
 
-          <!-- SOLUTIONS Column -->
+
           <ng-container matColumnDef="interactions">
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
             <td mat-cell *matCellDef="let element">0</td>
@@ -152,9 +278,22 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
       </mat-card>
-    </div>
+    </div-->
 
-    <mat-card class="card-chart donut">
+    <!--mat-card class="card-chart donut">
+      <p class="title">Título de la gráfica</p>
+      <div class="content">
+        <canvas
+          class="donut-chart"
+          baseChart
+          [data]="data"
+          [type]="'doughnut'"
+          [options]="chartOptions"
+        ></canvas>
+      </div>
+    </mat-card-->
+
+    <!--mat-card class="card-chart circle">
       <p class="title">Título de la gráfica</p>
       <div class="content">
         <canvas
@@ -166,18 +305,5 @@
         ></canvas>
       </div>
     </mat-card>
-
-    <mat-card class="card-chart circle">
-      <p class="title">Título de la gráfica</p>
-      <div class="content">
-        <canvas
-          class="donut-chart"
-          baseChart
-          [data]="data"
-          [type]="'doughnut'"
-          [options]="chartOptions"
-        ></canvas>
-      </div>
-    </mat-card>
-  </div>
+  </div-->
 </div>
