--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -14,7 +14,7 @@
       Permiso para editar
    </button> 
 
-    <button type="button">
+    <!-- <button type="button">
       <span>Ciudadanos</span>
     </button>
 
@@ -25,6 +25,7 @@
     <button type="button">
       <span>Comité Ciudadano</span>
     </button> -->
+
     <button type="button">
       <span>Pensamiento colectivo</span>
     </button>
