--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar *ngIf="isDataAvailable">
   <div class="set-6 logo">
     <div class="set-3">
-      <img src="../../../assets/images/PANDOlogo.png" alt="PANDO" (click)="linkMe('home')">
+      <img src="assets/images/PANDOlogo.png" alt="PANDO" (click)="linkMe('home')">
     </div>
     <div class="set-9">
       <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" disabled>
