--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
@@ -1,19 +1,27 @@
 :host {
   .container {
     width: 600px;
-    max-height: 400px;
-    padding: 25px;
+    height: 450px;
   }
   .header {
-    width: 100%;
-    height: 70px;
+    position: absolute;
+    top: 0px;
+    left: 1px;
+    width: 95%;
+    height: 92px;
+    background-color: white;
+    padding-bottom: 30px;
     display: flex;
+    .title {
+      position: relative;
+      top: 25px;
+    }
 
     .button {
       color: #71f5ad;
       position: relative;
-      top: -10px;
-      right: -8px;
+      top: 19px;
+      right: 26px;
     }
   }
   .body {
@@ -22,7 +30,7 @@
     line-height: 25px;
 
     .text {
-      padding-bottom: 60px;
+      padding: 60px;
     }
   }
 }
