--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -1,11 +1,13 @@
 :host {
   .main-box {
+    width: 100%;
     height: 480px;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 
     .main {
       height: 480px;
-      // width: 100%;
+      width: 100%;
       display: flex;
       background-image: radial-gradient(#71f5ac2e 5%, transparent 5%);
       background-position: 0 0, 20px 20px;
@@ -15,6 +17,8 @@
       background: linear-gradient(360deg, rgba(0, 3, 79, 0) -20%, #00031d 100%);
       //71f5ad
       align-items: center;
+      overflow-y: hidden;
+      overflow-x: auto;
 
       .align {
         height: 100%;
