--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -103,16 +103,8 @@
             <mat-card>
               <!-- IMAGE -->
               <div class="image-box">
-                <mat-icon *ngIf="topic.images.length === 0">panorama</mat-icon>
-                <div class="overlay" (click)="popImageViewer()">
-                  <mat-icon>photo_camera</mat-icon>
-                  <div class="cover"></div>
-                </div>
-                <slider-images
-                  [images]="topic.images"
-                  *ngIf="topic.images.length !== 0"
-                ></slider-images>
-                <!-- <img *ngIf="image" [src]="image" alt="" /> -->
+                <mat-icon *ngIf="!image">panorama</mat-icon>
+                <img *ngIf="image" [src]="image" alt="" />
                 <div class="info">
                   <button class="custom-circle">
                     <mat-icon>thumb_up</mat-icon>
