--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -56,12 +56,15 @@
       <mat-icon>power_settings_new</mat-icon>
     </button>
 
-    <button type="button" class="btn-ico" *ngIf="user != null && userActivities.includes('moderator')"
-      [matMenuTriggerFor]="menu">
+    <button type="button" class="btn-ico" [matMenuTriggerFor]="menu" *ngIf="user != null">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="linkMe('userList')">
+      <button mat-menu-item (click)="resetPassword(user.email)">
+        <mat-icon>lock</mat-icon>
+        <span>Cambiar contraseña</span>
+      </button>
+      <button mat-menu-item (click)="linkMe('userList')" *ngIf="userActivities.includes('moderator')">
         <mat-icon>groups</mat-icon>
         <span>Usuarios</span>
       </button>
