--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12" *ngIf="isDataAvailable && !isMobile">
   <breadcrumbs-component>
     <li>Documentos</li>
     <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos-publicos/' + document._id)">
@@ -83,4 +83,8 @@
       </mat-card>
     </div>
   </div>
+</div>
+
+<div class="set-12" *ngIf="isDataAvailable && isMobile">
+  <div class="public-document-mobile-category-view" [category]="selectedCategory"></div>
 </div>
