--- a/src/app/public-documents/category/category.component.scss
+++ b/src/app/public-documents/category/category.component.scss
@@ -102,5 +102,9 @@
       transform: translate(-50%, -50%);
     }
   }
+}
 
+:host(.fixmobile) {
+  padding: 0 !important;
+  margin: 0 !important;
 }
