--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -78,4 +78,5 @@
 <!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <div class="public-document-mobile-view" [document]="document" [topSolutions]="topSolutions"></div>
+  <div class="public-document-mobile-fixed-tools"></div>
 </div>
